--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Counter Project</title>
-  <link rel="stylesheet" href="counter.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <main>
@@ -24,6 +24,6 @@
     </div>
   </main>
   <!---javaScript-->
-  <script src="counter.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
